--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
   "author": "Aritra Sinha",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "connect-flash": "^0.1.1",
     "dompurify": "^2.0.12",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "jsdom": "^16.3.0",
     "marked": "^1.1.1",
     "method-override": "^3.0.0",
     "mongoose": "^5.9.26",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "slugify": "^1.4.5"
   },
   "devDependencies": {
